maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: '=>' expected but '=' found.
      case nb if nb=0 => gauche()
                   ^RandomMouseMaze:8: error: '=>' expected but '=' found.
      case nb if nb=1 => droite()
                   ^